# MediPal

./: .gitignore  Dockerfile  LICENSE  MediPal-Project.ipynb  README.md  docker-compose.yml  medipal_api.py  medipal_chatbox.py  pyproject.toml  requirements.txt  requirements2.txt  test.py
1_DataPipeline/: 1_Medicine_data_collection.ipynb  2_Medicine_data_preprocessing_analysis.ipynb  3_Medicine_data_chunking.ipynb  4_Medicine_data_generate_questions.ipynb  mytools.py
1_LLM_Selection/: README.md  Test_and_Select_LLM.ipynb
2_AgenticRAG/: 1_Medicine_data_chunking.ipynb  1_Rerank_Retriever.ipynb  2_Agentic_RAG.ipynb  2_Medicine_data_generate_questions.ipynb  3_MediPal.ipynb  3_Rerank_Retriever.ipynb  4_Agentic_RAG.ipynb  5_MediPal.ipynb  agentic_rag.py  rerank_retriever.py
2_DataPipeline/: 1_Medicine_data_collection.ipynb  2_Medicine_data_preprocessing_analysis.ipynb  3_Medicine_data_chunking.ipynb  4_Medicine_data_generate_questions.ipynb  README.md
3_AgenticRAG/: 1_Rerank_Retriever.ipynb  2_Agentic_RAG.ipynb  3_MediPal.ipynb  4_API_Chatbox.ipynb  5_Evaluation.ipynb  README.md
Agentic-RAG/: 1_Medicine_data_chunking.ipynb  2_Medicine_data_hypothentical_question.ipynb  2_Medicine_data_hypothetical_question.ipynb  3_Agentic_RAG.ipynb  3_Basic_RAG.ipynb  3_Rerank_RAG.ipynb  4_Agentic_RAG.ipynb  5_MediPal.ipynb  agentic_rag.py  basicRag.py  langgraph_self_rag_local.ipynb  medipal.py  medipal_api.py  mytools.py  rerank_rag.py  settings.py  test-langgraph.ipynb  test_Local_LLM_function_calling.ipynb  test_fastapi.py  test_gradio.py  test_in_RAG_Project.ipynb  (+2 more)
(+22 files in other folders)
