[project]
name = "MediPal"
version = "0.1.0"
description = "MediPal is your AI friend for medical and clinical Q&A."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent>=0.1.3",
    "fastapi>=0.118.0",
    "faster-whisper>=1.2.0",
    "gradio>=5.49.0",
    "gtts>=2.5.4",
    "huggingface-hub>=0.35.3",
    "ipython>=9.6.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.78",
    "langchain-huggingface>=0.3.1",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]
