[project]
name = "medipal"
version = "0.1.0"
description = "Medical Q&A agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.118.1",
    "faster-whisper>=1.2.0",
    "gradio>=5.49.0",
    "gtts>=2.5.4",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langgraph-cli[inmem]>=0.4.2",
    "langgraph-sdk>=0.2.9",
    "langid>=1.1.6",
    "matplotlib>=3.10.6",
    "ragas>=0.3.6",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
    "wikipedia>=1.4.0",
]
